--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -9,7 +9,7 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="javascript:switchLang(1)">Tiếng việt nam</a>
-                <a class="dropdown-item" href="javascript:switchLang(0)">简体中文</a>
+<!--                <a class="dropdown-item" href="javascript:switchLang(0)">简体中文</a>-->
             </div>
         </div>
     </div>
